prevented horizontal overflow for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -68,10 +68,13 @@ td {
   border: 0;
 }
 
-body {
+html,body {
   overflow-x: hidden;
 }
 
+body {
+  position: relative
+}
 #header {
   width: 100%;
   height: 100px;
